welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
}

avance()
baisseBrosse()
gauche()
leveBrosse()
avance()
gauche()
avance()
baisseBrosse()
gauche()
leveBrosse()
avance()
gauche()
avance()
avance()
setColourBrosse()
baisseBrosse()
leveBrosse()
avance()
gauche()
baisseBrosse()
leveBrosse()
gauche()
avance()
gauche()
avance()